set serverless version to zvoid login

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm ci
       
     - name: Install Serverless Framework
-      run: npm install -g serverless
+      run: npm install -g serverless@3
       
     - name: Deploy to AWS
       env:
