push message to the queue

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.624.0",
     "express": "^4.19.2",
     "serverless-http": "^3.2.0"
   }
