--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,12 @@ service: sample-event-driven
 provider:
   name: aws
   runtime: nodejs20.x
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - sqs:SendMessage
+      Resource:
+        - !GetAtt SampleQueue.Arn
 
 functions:
   api:
