--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,9 @@
 # "org" ensures this Service is used with the correct Serverless Framework Access Key.
 org: sohamnakhare
 # "app" enables Serverless Framework Dashboard features and sharing them with other Services.
-app: sample-event-driven
+app: sample-event-driven-2
 # "service" is the name of this project. This will also be added to your AWS resource names.
-service: sample-event-driven
+service: sample-event-driven-2
 
 provider:
   name: aws
@@ -24,26 +24,26 @@ functions:
     handler: handler.handler
     events:
       - httpApi: "*"
-    #   - sqs:
-    #       arn:
-    #         Fn::GetAtt:
-    #           - MyQueue
-    #           - Arn
-    # environment:
-    #   SQS_URL:
-    #     Ref: MyQueue
-  # consumer:
-  #   handler: consumer.handler
-  #   events:
-  #     - sqs:
-  #         arn:
-  #           Fn::GetAtt:
-  #             - MyQueue
-  #             - Arn
-  #         batchSize: 10
-  #   environment:
-  #     SQS_URL:
-  #       Ref: MyQueue
+      - sqs:
+          arn:
+            Fn::GetAtt:
+              - MyQueue
+              - Arn
+    environment:
+      SQS_URL:
+        Ref: MyQueue
+  consumer:
+    handler: consumer.handler
+    events:
+      - sqs:
+          arn:
+            Fn::GetAtt:
+              - MyQueue
+              - Arn
+          batchSize: 10
+    environment:
+      SQS_URL:
+        Ref: MyQueue
 
 resources:
   Resources:
