--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "@aws-sdk/client-sqs": "^3.624.0",
     "express": "^4.19.2",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^6.0.0"
   }
 }
