--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.624.0",
     "express": "^4.19.2",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "twilio": "^5.2.2"
   },
   "devDependencies": {
     "serverless-dotenv-plugin": "^6.0.0"
