--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.631.0",
     "@aws-sdk/client-sqs": "^3.624.0",
+    "aws-sdk": "^2.1675.0",
     "express": "^4.19.2",
     "serverless-http": "^3.2.0",
     "twilio": "^5.2.2"
