--- a/serverless.yml
+++ b/serverless.yml
@@ -36,8 +36,8 @@ functions:
     environment:
       SQS_URL:
         Ref: MyQueue
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      MY_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      MY_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   consumer:
     handler: consumer.handler
     events:
